added teatRail integration and one file with parametrization of fixtures

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 markers =
     development: marker for running test only on dev env.
     production: marker for running test only on prod env.
+
+junit_family=legacy
